ci configure fix
- Fixed CI configuration for auction-service

--- a/.github/workflows/docker-ci.yml
+++ b/.github/workflows/docker-ci.yml
@@ -4,11 +4,17 @@ on:
   push:
     branches: [main]
   pull_request:
+    paths:
+      - 'auction-service/**'
     branches: [main]
 
 jobs:
   php-ci:
     runs-on: ubuntu-latest
+
+    defaults:
+      run:
+        working-directory: auction-service
 
     steps:
       - name: Checkout code
